# toktok-stack

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .local.example.bazelrc  .restyled.yaml  MODULE.bazel  compose.yml  cspell.config.yaml  ghc.nix  stack.yaml
.github/workflows/: ci.yml  docker.yml
tools/: BUILD.bazel  boot.bazelrc  git-remotes
tools/built/: build-all.sh
tools/built/src/: Dockerfile  Dockerfile.dev  Dockerfile.third_party
tools/built/src/home/.config/home-manager/: home.nix
tools/config/: BUILD.bazel
tools/haskell/: haskell_targets.bzl  hie-docker
tools/project/: build_defs.bzl  cabal_test  mkstamp_c.sh
tools/workspace/: github.bzl  nix_cc.bzl  nix_java.bzl  nix_python.bzl  nix_rust.bzl  nix_sh.bzl  non_module_deps.bzl  python.bzl  rules_nixpkgs.bzl
