config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "freebsd",
    constraint_values = ["@platforms//os:freebsd"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:osx"],
    visibility = ["//visibility:public"],
)

# deprecated
config_setting(
    name = "osx",
    constraint_values = ["@platforms//os:osx"],
    # deprecated = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:arm64"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos-arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux-arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux-x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows-x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

# Active under --config=msan (via build:msan --define=san=msan in .bazelrc).
config_setting(
    name = "msan",
    values = {"define": "san=msan"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux-x86_64-msan",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    values = {"define": "san=msan"},
    visibility = ["//visibility:public"],
)

# Used under :local where libpython isn't on the test sandbox's dlopen path.
config_setting(
    name = "linux-x86_64-no-python",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    values = {"define": "toxic_python=no"},
    visibility = ["//visibility:public"],
)
